--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <script src = "JS.js" defer></script>
 </head>
 <body>
-  <div id = "statement1"> Clicking on a circle will change the color of that circle and its neighbors. In exactly 3 moves, make the board below the same color as the board above it. </div>
-  <div id = "statement2"> In exactly 3 moves, make the board below the same color as the board above it. </div>
+  <div id = "statement1"> Clicking on a circle will change the color of that circle and its neighbors. </div>
+  <div id = "statement2"> In exactly 3 moves, make the larger board the same color as the smaller one. </div>
   <div id = "HEADING"> GO FOR IT !!!!!!! </div>
   <div id = "ANSWER"> </div>
   <button id = "BUTT" onclick = "init()"> New Game</button>
